--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "repository": {
     "type": "git",
+    "type": "module",
     "url": "git+https://github.com/fedorova-ekaterina/frontend-project-44.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fedorova-ekaterina/frontend-project-44/issues"
+  },
+ "bin": {
+  "brain-games": "bin/brain-games.js"
   },
   "homepage": "https://github.com/fedorova-ekaterina/frontend-project-44#readme"
 }
