--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/fedorova-ekaterina/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/fedorova-ekaterina/frontend-project-44/actions)",
@@ -7,7 +8,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "git",
     "type": "module",
     "url": "git+https://github.com/fedorova-ekaterina/frontend-project-44.git"
   },
@@ -16,8 +16,17 @@
   "bugs": {
     "url": "https://github.com/fedorova-ekaterina/frontend-project-44/issues"
   },
- "bin": {
-  "brain-games": "bin/brain-games.js"
+  "bin": {
+    "brain-games": "bin/brain-games.js"
   },
-  "homepage": "https://github.com/fedorova-ekaterina/frontend-project-44#readme"
+  "homepage": "https://github.com/fedorova-ekaterina/frontend-project-44#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
+  }
 }
